--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <title>Mapa Interativo - Ambev</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
@@ -25,55 +24,55 @@
       z-index: 0;
     }
 
-.filtros {
-    position: absolute;
-    top: 12px;
-    left: 12px;
-    z-index: 1000;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    max-width: calc(100vw - 40px); /* evita estouro horizontal */
-    padding: 10px;
-}
+    .filtros {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      z-index: 1000;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      max-width: calc(100vw - 40px);
+      padding: 10px;
+    }
 
-.filtros select {
-    font-size: 13px;
-    width: 200px;
-    height: 40px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    padding: 6px 10px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    background-color: #f7f7f7;
-    box-sizing: border-box;
-    flex-shrink: 0; /* evita compressão */
-}
+    .filtros select {
+      font-size: 13px;
+      width: 200px;
+      height: 40px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      padding: 6px 10px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+      background-color: #f7f7f7;
+      box-sizing: border-box;
+      flex-shrink: 0;
+    }
 
-.choices__inner {
-    border-radius: 10px !important;
-    background-color: #f7f7f7 !important;
-    font-size: 13px;
-    min-height: 38px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
-    box-sizing: border-box;
-}
+    .choices__inner {
+      border-radius: 10px !important;
+      background-color: #f7f7f7 !important;
+      font-size: 13px;
+      min-height: 38px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+      box-sizing: border-box;
+    }
 
-.choices[data-type*=select-multiple] .choices__button {
-    font-size: 10px;
-}
+    .choices[data-type*=select-multiple] .choices__button {
+      font-size: 10px;
+    }
 
     #botaoHeatmap {
-     position: absolute;
-    bottom: 10px;
-    left: 10px;
-    background-color: white; /* Reaplica o fundo branco */
-    padding: 6px 12px;
-    border-radius: 10px;
-    font-size: 12px;
-    font-family: Arial, sans-serif;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-    z-index: 1001;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background-color: white;
+      padding: 6px 12px;
+      border-radius: 10px;
+      font-size: 12px;
+      font-family: Arial, sans-serif;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+      z-index: 1001;
     }
 
     #legenda {
@@ -128,6 +127,20 @@
     const grupoMarcadores = L.layerGroup().addTo(map);
     let heatLayer;
 
+    const iconCDD = L.icon({
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/159/159604.png',
+      iconSize: [30, 30],
+      iconAnchor: [15, 30],
+      popupAnchor: [0, -30]
+    });
+
+    const cddLocations = [
+      { name: 'GAM', lat: -16.001772915238647, lon: -48.05215353019492 },
+      { name: 'CUI', lat: -15.56189216397978, lon: -56.12758838443211 },
+      { name: 'GOI', lat: -16.609740763065844, lon: -49.292487087578984 },
+      { name: 'MAN', lat: -3.021734706895321, lon: -60.02195693918584 }
+    ];
+
     const filtros = {
       CDD: new Choices('#filtroCDD', { removeItemButton: true }),
       GN: new Choices('#filtroGN', { removeItemButton: true }),
@@ -154,6 +167,17 @@
 
     function atualizarMapa(dados) {
       grupoMarcadores.clearLayers();
+
+      // Reinsere os CDDs fixos com ícone personalizado
+      cddLocations.forEach(location => {
+        const marker = L.marker([location.lat, location.lon], {
+          icon: iconCDD
+        }).bindPopup(
+          `<b>${location.name}</b><br>Latitude: ${location.lat}<br>Longitude: ${location.lon}`
+        );
+        grupoMarcadores.addLayer(marker);
+      });
+
       if (heatLayer) map.removeLayer(heatLayer);
       let heatData = [];
 
@@ -172,15 +196,39 @@
         const gnValido = gn.length === 0 || gn.includes(d['GN']);
         const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
         const redeValido = rede.length === 0 || rede.includes(d['Rede']);
-
         let diaValido = false;
         let cor = 'gray';
 
-        for (let dia of (diasSelecionados.length ? diasSelecionados : Object.keys(coresPorDia))) {
-          if (d[dia]?.trim() === '1') {
+        if (diasSelecionados.length === 0) {
+          const dias = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
+          for (let dia of dias) {
+            if (d[dia]?.trim() === '1') {
+              cor = coresPorDia[dia];
+              diaValido = true;
+              break;
+            }
+          }
+          const isAgenda = dias.every(dia => d[dia]?.trim() === '1');
+          if (isAgenda) {
             diaValido = true;
-            cor = coresPorDia[dia] || 'gray';
-            break;
+            cor = coresPorDia['Agenda'];
+          }
+        } else {
+          if (diasSelecionados.includes('Agenda')) {
+            const isAgenda = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'].every(dia => d[dia]?.trim() === '1');
+            if (isAgenda) {
+              diaValido = true;
+              cor = coresPorDia['Agenda'];
+            }
+          }
+          if (!diaValido) {
+            for (let dia of diasSelecionados) {
+              if (d[dia]?.trim() === '1') {
+                cor = coresPorDia[dia];
+                diaValido = true;
+                break;
+              }
+            }
           }
         }
 
@@ -193,13 +241,8 @@
             fillOpacity: 0.8,
             weight: 1
           }).bindPopup(
-            `<b>${d['Nome']}</b><br>
-            CDD: ${d['CDD']}<br>
-            GN: ${d['GN']}<br>
-            Inplant: ${d['Inplant']}<br>
-            Rede: ${d['Rede']}`
+            `<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`
           );
-
           grupoMarcadores.addLayer(marker);
         }
       });
@@ -212,7 +255,6 @@
       header: true,
       complete: results => {
         const dados = results.data;
-
         preencherFiltros(dados, 'CDD', filtros.CDD);
         preencherFiltros(dados, 'GN', filtros.GN);
         preencherFiltros(dados, 'Inplant', filtros.Inplant);
