--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     let heatLayer;
 
     const iconCDD = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/159/159604.png',
+      iconUrl: 'https://www.flaticon.com/free-icon/location-pin_2776067?term=location&page=1&position=24&origin=search&related_id=2776067',
       iconSize: [30, 30],
       iconAnchor: [15, 30],
       popupAnchor: [0, -30]
