--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       left: 0;
       z-index: 0;
     }
-    .filtros {
+     .filtros {
       position: absolute;
       top: 12px;
       left: 12px;
@@ -35,17 +35,17 @@
     .filtros label {
       font-size: 13px;
       font-weight: bold;
-      margin-bottom: 2px;
+      margin-bottom: 4px;
       display: block;
     }
     .filtros .select-wrapper {
       display: flex;
       flex-direction: column;
     }
-    .filtros select {
-      font-size: 13px;
-      width: 200px;
-      height: 40px;
+     .filtros select {
+      font-size: 14px;
+      width: 220px;
+      height: 42px;
       border-radius: 10px;
       border: 1px solid #ccc;
       padding: 6px 10px;
@@ -56,8 +56,8 @@
     .choices__inner {
       border-radius: 10px !important;
       background-color: #f7f7f7 !important;
-      font-size: 13px;
-      min-height: 38px;
+      font-size: 14px !important;
+      min-height: 40px;
       box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
     }
     .choices[data-type*=select-multiple] .choices__button {
