--- a/index.html
+++ b/index.html
@@ -112,48 +112,59 @@
       pointer-events: none;
     }
 
-    @media (max-width: 768px) {
-      .filtros {
-        flex-direction: column;
-        align-items: flex-start;
-        left: 10px;
-        top: 10px;
-        gap: 8px;
-        background: rgba(255,255,255,0.95);
-        padding: 10px;
-        border-radius: 10px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-        max-width: 90vw;
-      }
+  @media (max-width: 768px) {
+  .filtros {
+    flex-direction: column;
+    align-items: flex-start;
+    left: 10px;
+    top: 10px;
+    gap: 10px;
+    background: rgba(255, 255, 255, 0.95);
+    padding: 12px;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    max-width: 90vw;
+  }
 
-      .filtros .select-wrapper {
-        width: 100%;
-      }
+  .filtros .select-wrapper {
+    width: 100%;
+  }
 
-      .choices,
-      .choices__inner,
-      .filtros select {
-        width: 100% !important;
-        min-width: 100% !important;
-        max-width: 100% !important;
-      }
+  .choices,
+  .choices__inner,
+  .filtros select {
+    width: 100% !important;
+    min-width: 100% !important;
+    max-width: 100% !important;
+    height: auto !important;
+  }
 
-      .choices__list--dropdown .choices__item {
-        max-width: 100% !important;
-      }
+  .choices__inner {
+    white-space: normal !important; /* ❗permite quebra de linha */
+    overflow: visible !important;
+    text-overflow: unset !important;
+    min-height: 44px !important;
+    line-height: 20px !important;
+  }
 
-      #botaoHeatmap {
-        left: 10px;
-        font-size: 14px;
-        padding: 8px 16px;
-      }
+  .choices__list--dropdown .choices__item {
+    white-space: normal !important; /* ❗mostra o nome completo */
+    max-width: 100% !important;
+    padding: 6px 10px !important;
+  }
 
-      #legenda {
-        font-size: 11px;
-        padding: 5px;
-        max-width: 95vw;
-      }
-    }
+  #botaoHeatmap {
+    left: 10px;
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+  #legenda {
+    font-size: 11px;
+    padding: 5px;
+    max-width: 95vw;
+  }
+
   </style>
 </head>
 <body>
