--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <title>Mapa Interativo - Ambev</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+
   <style>
     html, body {
       width: 100%;
@@ -112,59 +112,69 @@
       pointer-events: none;
     }
 
-  @media (max-width: 768px) {
-  .filtros {
-    flex-direction: column;
-    align-items: flex-start;
-    left: 10px;
-    top: 10px;
-    gap: 10px;
-    background: rgba(255, 255, 255, 0.95);
-    padding: 12px;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    max-width: 90vw;
-  }
+    @media (max-width: 768px) {
+      .filtros {
+        flex-direction: column;
+        align-items: flex-start;
+        left: 10px;
+        top: 10px;
+        gap: 10px;
+        background: rgba(255, 255, 255, 0.95);
+        padding: 12px;
+        border-radius: 10px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+        max-width: 95vw;
+      }
 
-  .filtros .select-wrapper {
-    width: 100%;
-  }
+      .filtros .select-wrapper {
+        width: 100%;
+      }
 
-  .choices,
-  .choices__inner,
-  .filtros select {
-    width: 100% !important;
-    min-width: 100% !important;
-    max-width: 100% !important;
-    height: auto !important;
-  }
+      .choices,
+      .choices__inner,
+      .filtros select {
+        width: 100% !important;
+        min-width: 100% !important;
+        max-width: 100% !important;
+        height: auto !important;
+      }
 
-  .choices__inner {
-    white-space: normal !important; /* ❗permite quebra de linha */
-    overflow: visible !important;
-    text-overflow: unset !important;
-    min-height: 44px !important;
-    line-height: 20px !important;
-  }
+      .choices__inner {
+        white-space: normal !important;
+        overflow: visible !important;
+        text-overflow: unset !important;
+        min-height: 44px !important;
+        line-height: 20px !important;
+        word-break: normal !important;
+        word-wrap: normal !important;
+      }
 
-  .choices__list--dropdown .choices__item {
-    white-space: normal !important; /* ❗mostra o nome completo */
-    max-width: 100% !important;
-    padding: 6px 10px !important;
-  }
+      .choices__list--dropdown .choices__item {
+        white-space: normal !important;
+        word-break: normal !important;
+        word-wrap: normal !important;
+        overflow: visible !important;
+        max-width: 100% !important;
+        padding: 6px 10px !important;
+      }
 
-  #botaoHeatmap {
-    left: 10px;
-    font-size: 14px;
-    padding: 8px 16px;
-  }
+      .choices__item--selectable {
+        display: flex !important;
+        align-items: center;
+        justify-content: flex-start;
+      }
 
-  #legenda {
-    font-size: 11px;
-    padding: 5px;
-    max-width: 95vw;
-  }
+      #botaoHeatmap {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
 
+      #legenda {
+        font-size: 11px;
+        padding: 5px;
+        max-width: 95vw;
+      }
+    }
   </style>
 </head>
 <body>
