--- a/index.html
+++ b/index.html
@@ -149,13 +149,19 @@
         word-wrap: normal !important;
       }
 
+      .choices__list--dropdown {
+        max-height: 300px !important;
+        overflow-y: auto !important;
+        font-size: 16px !important;
+      }
+
       .choices__list--dropdown .choices__item {
         white-space: normal !important;
         word-break: normal !important;
         word-wrap: normal !important;
         overflow: visible !important;
         max-width: 100% !important;
-        padding: 6px 10px !important;
+        padding: 10px !important;
       }
 
       .choices__item--selectable {
